Fixed Sign In Align

--- a/client/stylesheets/Concloud.css
+++ b/client/stylesheets/Concloud.css
@@ -242,6 +242,10 @@ html,body{
     }
 }
 
+.submitSignIn, .forgotPassword{
+	text-align: center;
+}
+
 
  /**
   * Footer
